July 21/2017 : v0.15 released
  - fix : save/load were corrupted

May 25/2017 : v0.14 released
  - new : bits are printed like a dotted line now with an offset 0-100

Apr 5/2017 : v0.11 released
  - fix : brought back S7 multi-tag reading (performance improvement)

Mar 30/2017 : v0.10 released
  - fix : NI connection issue

Mar 10/2017 : v0.9 released
  - fix : NI is big endian

Feb 22/2017 : v0.8 released
  - fix : improved PLC connections

Feb 17/2017 : v0.7 released
  - fix : added support for AB INT data type

Nov 22/2016 : v0.6 released
  - fix : changed image background to white for printing
  - fix : grouping siemens tags

Oct 28/2016 : v0.5 released
  - fix : colors were reset when editing a tag
  - new : added ticks on graph every second (or 5 or 10 seconds for slow speeds)
  - fix : freq counter

Oct 25/2016 : v0.4 released
  - fix : DAQmx counter and digital inputs fixed

Oct 24/2016 : v0.3 released
  - new : added support for National Instruments DAQmx systems

Oct 18/2016 : v0.2 released
  - fix : s7 tags were limited to block number 127

Oct 7/2016 : v0.1 released
  - init public release