@@ -1,5 +1,9 @@
 What's new...
 
+Jul 31/2017 : JF 16.2.0 released
+  - jfDataLogger/0.16
+    - fix : another load/save issue
+
 Jul 21/2017 : JF 16.1.0 released
   - jfControls/0.2
     - added support for including Java9 with MSI package (including compiler)
