@@ -1,3 +1,6 @@
+July 31/2017 : v0.16 released
+  - fix : another save/load issue
+
 July 21/2017 : v0.15 released
   - fix : save/load were corrupted
 
